--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,21 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    /* align-items: center; */
 }
 
+.application {
+    width: 80vw;
+    margin: auto;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 10px;
+    
+}
+.application > * {
+    margin-left: 5px;
+    margin-top: 5px;
+}
