--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,99 @@
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Nunito', sans-serif;
+    outline: none;
+    text-decoration: none;
+}
+
+/* Navbar */
+.navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 40px;
+    color: white;
+    font-weight: bold;
+    background-color:black;
+}
+.navbar a {
+    padding: 5px 10px;
+    color: white;
+    border: 1px solid black;
+    border-radius: 5px;
+    transition: background-color .5s;
+}
+.navbar a:hover {
+    background-color: grey;
+}
+
+.navbar button {
+    color: white;
+    padding: 5px 10px;
+    background-color: black;
+    border-radius: 5px;
+}
+/* Auth page */
+.auth-container {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    height: 100vh;
+
+    background-color: rgb(228, 228, 228);
+    background-image: url("https://images.unsplash.com/photo-1523287562758-66c7fc58967f?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
+    background-position: center;
+    background-size: cover;
+}
+
+.auth-container > h1 {
+    font-size: 2em;
+    margin: 24px;
+}
+
+.auth-container > p {
+    margin: 16px;
+    text-decoration: underline;
+}
+.auth-container > p:hover {
+    font-weight: bold;
+    cursor: pointer;
+
+}
+.auth-container > form {
+    border: 1px solid #3339;
+    padding: 20px;
+    border-radius: 10px;
+    background-color: rgb(228, 228, 228);
+  
+    display: flex;
+    flex-direction: column;
+}
+  
+.auth-container > form > input {
+    margin: 16px 8px;
+    padding: 8px;
+    border-radius: 10px;
+}
+  
+.auth-container > form > button {
+    margin: 16px 8px;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+    padding: 8px;
+    border-radius: 10px;
+    background-color: rgb(92, 0, 92);
+}
+
+
+/* Home page*/
+.homepage h1, .homepage h2 {
+    text-align: center;
+
+}
+
 .applicationList {
     display: flex;
     flex-direction: column;
@@ -19,4 +115,8 @@
 .application > * {
     margin-left: 5px;
     margin-top: 5px;
+}
+
+.datapage h1 {
+    text-align: center;
 }
